package com.pjsoft.j2arch.uml.service;

import java.util.*;



/**
 * Storage Service
 * 
 * Manages storing UML diagrams.
 */
public class StorageService {
    //private ConfigurationManager config;

    public StorageService() {
       
    }

    public void storeDiagram(String format, String outputPath) {
        // Store logic
    }
}