@startuml
skinparam linetype Ortho
package service {
class ClassDiagramService {
    org.slf4j.Logger logger
    public void generateClassDiagram(CodeEntity codeEntity, JavaDocGenerationContext context)
    public void generateClassDiagramByPackage(Map<String,PackageEntity> packageEntities, UMLGenerationContext context, ProgressTracker progressTracker)
    public String generateUnifiedClassDiagram(List<CodeEntity> codeEntities, UMLGenerationContext context)
    private void generateUnifiedPumlFile(List<CodeEntity> codeEntities, UMLGenerationContext context)
    private String simpleName(String fullyQualifiedName)
    private void writeClassDiagram(CodeEntity codeEntity, BufferedWriter writer)
}
ClassDiagramService --> PathResolver : caller-callee
ClassDiagramService --> UMLGenerationContext : caller-callee
ClassDiagramService --> DiagramImageGenerator : caller-callee
ClassDiagramService --> CodeEntity : caller-callee
ClassDiagramService --> FieldEntity : caller-callee
ClassDiagramService --> MethodEntity : caller-callee
ClassDiagramService --> Relative : caller-callee
ClassDiagramService --> JavaDocGenerationContext : caller-callee
ClassDiagramService --> ProgressTracker : caller-callee
ClassDiagramService --> PackageEntity : caller-callee
ClassDiagramService -- WorkUnitType : association
class PackageDiagramService {
    Logger logger
    public void generatePackageDiagram(PackageEntity packageEntity, JavaDocGenerationContext context)
}
PackageDiagramService --> PackageEntity : caller-callee
PackageDiagramService --> JavaDocGenerationContext : caller-callee
PackageDiagramService --> CodeEntity : caller-callee
PackageDiagramService --> DiagramImageGenerator : caller-callee
class SequenceDiagramService {
    org.slf4j.Logger logger
    public String generateSequenceDiagram(List<CodeEntity> codeEntities, GenerationContext context, ProgressTracker progressTracker)
    private String writePlantUmlToFile(String plantUmlSyntax, File outputDirectory, Scenario scenario)
}
SequenceDiagramService --> GenerationContext : caller-callee
SequenceDiagramService --> ScenarioBuilder : caller-callee
SequenceDiagramService --> ProgressTracker : caller-callee
SequenceDiagramService --> Scenario : caller-callee
SequenceDiagramService --> DiagramImageGenerator : caller-callee
SequenceDiagramService -- WorkUnitType : association
class StorageService {
    public void storeDiagram(String format, String outputPath)
}
}
@enduml
